--- a/src/containers/contact/Contact.scss
+++ b/src/containers/contact/Contact.scss
@@ -8,7 +8,7 @@
   color: $textColorDark;
 }
 
-.contact-div-main > * {
+.contact-div-main>* {
   flex: 1;
 }
 
@@ -45,7 +45,7 @@
   margin-top: 4rem;
 }
 
-.contact-image-div > img {
+.contact-image-div>img {
   max-width: 100%;
   height: auto;
   margin-left: 1.5rem;
@@ -53,7 +53,8 @@
 }
 
 /* Media Query */
-@media (max-width: 1380px), (max-width: 768px) {
+@media (max-width: 1380px),
+(max-width: 768px) {
   .contact-title {
     font-size: 56px;
     font-weight: 400;
